# tkn

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  batch_tokenize.py  cli.py  compare.py  cost.py  pyproject.toml  requirements-dev.txt  requirements.txt  token_count.py  tutorial.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  coverage.yml  quickstart.yml
benchmarks/: bench.py
benchmarks/results/: REPORT.md
docs/: algorithm.md  benchmarks.md  faq.md  limitations.md
examples/: demo.py
notebooks/: README.md
samples/: README.md
scripts/: analyze_oov.py  export_hf.py  fetch_corpus.py  fetch_kaniyam.py  filter_corpus.py  inspect_vocab.py  make_report.py  merge_corpora.py  print_table.py  profile_train.py  validate_model.py
tests/: conftest.py  test_all_vocabs.py  test_api.py  test_batch.py  test_from_pretrained.py  test_fuzz.py  test_hf_compat.py  test_idempotent.py  test_normalize.py  test_offsets.py  test_oov.py  test_perf.py  test_roundtrip.py  test_special_tokens.py  test_stats.py
tkn/: __init__.py  __main__.py  normalize.py  special_tokens_map.json  tokenizer.json  tokenizer_128k_config.json  tokenizer_128k_meta.json  tokenizer_16k.json  tokenizer_16k_config.json  tokenizer_16k_meta.json  tokenizer_64k_config.json  tokenizer_64k_meta.json  tokenizer_config.json  tokenizer_meta.json
tok_train/: train_all.py  train_bpe.py
(+1 files in other folders)
