[project]
name = "tkn"
version = "0.1.0"
description = "Tamil BPE tokenizer for LLM cost reduction"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "tokenizers>=0.23",
    "tiktoken>=0.13",
]
[project.optional-dependencies]
train = ["datasets>=3", "transformers>=4.46"]
[project.urls]
Homepage = "https://github.com/10xdev4u-alt/tkn"
